--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.7",
     "client": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
