--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
